<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pure Health Logger</string>
    <string name="action_settings">Settings</string>
    <string name="start_scan_for_devices">Scan for Devices</string>
    <string name="stop_scan_for_devices">Scanning...</string>
    <string name="connect">Connect</string>
    <string name="title_activity_uartdisplay">BTLE Log</string>
    <string name="file_name">File name:</string>
    <string name="file_name_hint">btle_log.csv</string>
    <string name="uart_log_header">UART Log:</string>
    <string name="uart_log_graph">si1153:</string>
    <string name="uart_log_graph1">accel:</string>
    <string name="status">Status:</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="signal_strength_hint">Signal strength icon</string>
    <string name="scan_label">UART Devices</string>

</resources>
