<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blazingmammothgames.tools.btledatalogger.UARTDisplayActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/file_name"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/logFileNameEditText"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:hint="@string/file_name_hint"
            android:focusable="true"
            android:enabled="true"
            android:editable="true"
            android:autoText="false"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <TextView
        android:id="@+id/logTextView"
        style="@style/AppTheme.LogText"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/logTextView"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uart_log_graph"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/logGraphView"
                style="@style/AppTheme.LogText"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:nestedScrollingEnabled="true" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphView"
                style="@style/AppTheme.LogText"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:nestedScrollingEnabled="true" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphView3"
                style="@style/AppTheme.LogText"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:nestedScrollingEnabled="true" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphView4"
                style="@style/AppTheme.LogText"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uart_log_graph1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphView2"
                style="@style/AppTheme.LogText"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Inverse"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/status"
            android:id="@+id/textView2"
            style="@style/AppTheme.Inverse" />

        <TextView
            android:id="@+id/statusTextView"
            style="@style/AppTheme.Inverse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <Button
        android:id="@+id/startStopLogButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout9"
        android:layout_weight="1"
        android:onClick="startStopLogging"
        android:text="@string/start_logging" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startStopLogButton"
        android:layout_weight="1"
        android:text="@string/uart_log_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
